--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ DerivedData/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
+
+# Ignore Mac DS_Store files
+.DS_Store
