--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ DerivedData/
 # Ignore Mac DS_Store files
 .DS_Store
 
-./CodingPratice/CodingPratice/LINE
-./CodingPratice/CodingPratice/LINE/*
+CodingPratice/CodingPratice/LINE
+CodingPratice/CodingPratice/LINE/*
