--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ DerivedData/
 
 # Ignore Mac DS_Store files
 .DS_Store
-
+CodingPratice/CodingPratice.xcodeproj
 CodingPratice/CodingPratice/LINE
 CodingPratice/CodingPratice/Naver
-CodingPratice/CodingPratice/LINE/*
+kakaoCodingTest/kakaoCodingTest.xcodeproj
